# wdr_project

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros_7489/lib/ros_7489/: broadcast_tf  follow_jerry  rotate_jerry  subscribe_jerry_position
install/ros_7489/share/ament_index/resource_index/package_run_dependencies/: ros_7489
install/ros_7489/share/ros_7489/: local_setup.sh  package.bash  package.sh
install/ros_7489/share/ros_7489/install/: setup.sh
install/ros_7489/share/ros_7489/log/: latest_build
log/: latest_build
src/ros_7489/: CMakeLists.txt
src/ros_7489/install/: local_setup.sh  setup.sh
src/ros_7489/install/ros_7489/lib/ros_7489/: rotate_jerry  set_background_color  spawn_jerry
src/ros_7489/install/ros_7489/share/ros_7489/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/ros_7489/install/ros_7489/share/ros_7489/install/: local_setup.sh
src/ros_7489/launch/: spawn_and_control.launch.py
src/ros_7489/log/: latest_build
src/ros_7489/src/: broadcast_tf.cpp  follow_jerry.cpp  rotate_jerry.cpp  set_background_color.cpp  spawn_jerry.cpp  subscribe_jerry_position.cpp
src/ros_7489/src/install/: local_setup.sh  setup.sh
src/ros_7489/src/log/: latest_build
